--- a/WishList/Views/Account/Register.cshtml
+++ b/WishList/Views/Account/Register.cshtml
@@ -6,17 +6,17 @@
 	<div>
 		<label asp-for="Email"></label>
 		<br />
-		<input />
+		<input asp-for="Email"/>
 	</div>
 	<div>
 		<label asp-for="Password"></label>
 		<br />
-		<input />
+		<input asp-for="Password"/>
 	</div>
 	<div>
 		<label asp-for="ConfirmPassword"></label>
 		<br />
-		<input />
+		<input asp-for="ConfirmPassword"/>
 	</div>
 	<div>
 		<button type="submit"></button>
